# lamc-reflex

./: .gitignore  README.md  lamc-diagrams.ipynb  lamc.cabal  poly.cabal  readme.md  stack-ghcjs-improved-base.yaml  stack-ghcjsi-improved-base.yaml  stack.yaml
.ipynb_checkpoints/: lamc-diagrams-checkpoint.ipynb
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/flag-cache/: StateVar-1.1.0.1-d26cc6243f7eb7d8194c4fd0dccc0689  base-orphans-0.4.4-61f87fbe40b70a96b4f01742198bd89e  bifunctors-5-9497b78c1808987b8601618de2742b5c  bound-1.0.6-a4e42d26445eb49f3b89ae376f0be5d9  boxes-0.1.4-77310885400dea00292db9fb907177e4  bytes-0.15.0.1-702df625462f24518c130bedea12956f  cereal-0.4.1.1-e7af0306d1317407815a09e40431fc3f  comonad-4.2.7.2-a2df15f47299f771bd42f6b929484798  contravariant-1.3.3-7e2fa0458dc8382e9c54337ddfd1c777  distributive-0.4.4-8ccf7d9b4dba827f6bbdf2f9c6ea65a1  exceptions-0.8.0.2-b08bd0de7dff383d124cad3f4c34eddd  free-4.12.1-6350bea634b114b277498c5c58225ab6  hashable-1.2.3.3-09c4177c49dd46a63f7036317bb17114  hashable-extras-0.2.2-9ba64eccb8301d500ccba9e97cf02790  lamc-0.1.0.0-3521144a113bda78208d8f08055aa6b5  lamc-0.1.0.0-6501ca97d41a94f04c070550e5307b5f  lamc-0.1.0.0-8cf03f86fc331fef054ab70c95f7088c  lamc-0.1.0.0-a13f08151a36294ab4fb6ce56d2fd3ab  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  nats-1-3ca5cbcec233c17da785d5f27705643c  prelude-extras-0.4.0.2-9cd8ab3397fab5f95aeab2ca5eb4ba56  pretty-tree-0.1.0.0-de8f1df912185833d3ae3763c11bb5cb  profunctors-5.1.1-9b9d3aa825e2e57ff3d8df6a662e6fc9  semigroupoids-5.0.0.4-262d14c83cfe9eac21dfd8d5debab552  semigroups-0.16.2.2-870d54bbdbbbc1bf0b2ef86678c125d1  split-0.2.2-bdc181dc0cb027cda71092df3fe3fb02  stm-2.4.4-2526ff89874f899372b2e4f544bb03cd  tagged-0.8.1-8fb7724b78ef88e44ca8950c77a173f6  text-1.2.1.3-2395ef415c1b20175aae83b50060e389  transformers-compat-0.4.0.4-3ca5cbcec233c17da785d5f27705643c  unordered-containers-0.2.5.1-09ed02f61ed89449c8cd4b51d7f295c2  void-0.7.1-a3c2de5724ac8a1217d95ecd31051aa3
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/lib/x86_64-osx-ghc-7.10.2/lamc-0.1.0.0-5eVrUU1K4dW8f168hbG4XR/: CofreeTree.dyn_hi  CofreeTree.hi  DbExp.dyn_hi  DbExp.hi  Eval.hi  Lib.dyn_hi  Lib.hi  TypeCheck.dyn_hi  TypeCheck.hi  libHSlamc-0.1.0.0-5eVrUU1K4dW8f168hbG4XR-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/lib/x86_64-osx-ghc-7.10.2/lamc-0.1.0.0-FwtKsOxpTtpFjrWTN5u3Ec/: Lib.dyn_hi  Lib.hi  libHSlamc-0.1.0.0-FwtKsOxpTtpFjrWTN5u3Ec-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/lib/x86_64-osx-ghc-7.10.2/lamc-0.1.0.0-KQEx4vMRsxZC97Q67HVQIR/: Lib.dyn_hi  Lib.hi  libHSlamc-0.1.0.0-KQEx4vMRsxZC97Q67HVQIR-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/lib/x86_64-osx-ghc-7.10.2/pretty-tree-0.1.0.0-KUqzZGgSjCu9FMCiSfESsz/: libHSpretty-tree-0.1.0.0-KUqzZGgSjCu9FMCiSfESsz-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/lib/x86_64-osx-ghc-7.10.2/pretty-tree-0.1.0.0-KUqzZGgSjCu9FMCiSfESsz/Data/Tree/: Pretty.dyn_hi  Pretty.hi
.stack-work/install/x86_64-osx/lts-3.11/7.10.2/pkgdb/: package.cache  pretty-tree-0.1.0.0-de8f1df912185833d3ae3763c11bb5cb.conf
app/: Main.hs
lamc/: LICENSE  lamc.cabal  stack.yaml
lamc.jsexe/: all.js  out.js  out.stats
lamc/app/: Main.hs
lamc/src/: CofreeTree.hs  Eval.hs  Parsers.hs
lamc/static/: lamc.css
poly_constraints/: poly.cabal  stack.yaml
poly_constraints/app/: Main.hs
poly_constraints/src/: DbExp.hs  Eval.hs  Lexer.hs  Parser.hs  Pretty.hs  Repl.hs
src/: CofreeTree.hs  CofreeTree.lhs  DB.hs  DbExp.hs  Eval.hs  HOAS.hs  Infer.hs  Lexicon.hs  Main.hs  PHOAS.hs  Parser.hs  Parsers.hs  Pretty.hs  Syntax.hs  TypeCheck.hs  TypeCheck.lhs
static/: lamc.css  treant.css
