name:                lamc
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dylnb/lamc#readme
license:             BSD3
license-file:        LICENSE
author:              dylan
maintainer:          dbumford@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , CofreeTree
                     , Eval
                     , DbExp
                     , TypeCheck
                     , Parsers
                     , Lexicon
                     , PHOAS
                     , HOAS
  build-depends:       base >= 4.7 && < 5
                     , bound
                     , prelude-extras
                     , transformers
                     , free
                     , comonad
                     , mtl
                     , containers
                     , pretty-tree
                     , parsec
                     , monad-coroutine
                     , haskeline
  default-language:    Haskell2010

executable lamc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lamc
                     , bound
                     , prelude-extras
                     , transformers
                     , free
                     , comonad
                     , mtl
                     , containers
                     , pretty-tree
                     , monad-coroutine
                     , parsec
                     , haskeline
  default-language:    Haskell2010

test-suite lamc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dylnb/lamc
