name:                poly
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:
      Eval
    , Infer
    , Lexer
    , Parser
    , Pretty
    , Syntax
    , Type
    , Env
    , DbExp
    , Repl

  build-depends:
      base          >= 4.6   && <4.9
    , pretty        >= 1.1   && <1.2
    , parsec        >= 3.1   && <3.2
    , text          >= 1.2   && <1.3
    , containers    >= 0.5   && <0.6
    , mtl           >= 2.2   && <2.3
    , transformers  >= 0.4.2 && <0.5
    , repline       >= 0.1.2.0
    , free
    , comonad
    , pretty-tree
    , bound
    , prelude-extras
    , reflex
    , reflex-dom
    , file-embed
  default-language:    Haskell2010


executable poly
  build-depends:       
      poly
    , base          >= 4.6   && <4.9
    , pretty        >= 1.1   && <1.2
    , parsec        >= 3.1   && <3.2
    , text          >= 1.2   && <1.3
    , containers    >= 0.5   && <0.6
    , mtl           >= 2.2   && <2.3
    , transformers  >= 0.4.2 && <0.5
    , repline       >= 0.1.2.0
    , free
    , comonad
    , pretty-tree
    , bound
    , prelude-extras
    , reflex
    , reflex-dom
    , file-embed

  default-language:    Haskell2010
  hs-source-dirs:      app
  main-is:             Main.hs
